modalComponent сделан, PageSwitcher сделан, почти доделан компонент GeneralSettings

--- a/src/assets/scss/common/fonts.scss
+++ b/src/assets/scss/common/fonts.scss
@@ -4,3 +4,10 @@
     font-style: normal;
     font-weight: normal;
 }
+
+@font-face {
+    font-family: "Nunito";
+    src: url("@/assets/fonts/Nunito-VariableFont_wght.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
