--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -1,2 +1,5 @@
 @import "header.scss";
 @import "fonts.scss";
+@import "popup.scss";
+@import "page-switcher.scss";
+@import "settings-switcher.scss";
