--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -3,3 +3,9 @@
 @import "popup.scss";
 @import "page-switcher.scss";
 @import "settings-switcher.scss";
+@import "chat";
+@import "general-settings.scss";
+@import "personal-settings.scss";
+@import "message-form.scss";
+@import "notification-settings.scss";
+@import "search-form.scss";
