--- a/src/assets/scss/common/chat.scss
+++ b/src/assets/scss/common/chat.scss
@@ -8,32 +8,45 @@
             border-right: 1px solid #D8D8D8;
             .chat_list {
                 padding: 0 15px;
+                min-height: 784px;
+                max-height: 784px;
                 .chat_user {
                     cursor: pointer;
                     margin-top: 20px;
                     display: flex;
                     align-items: center;
+                    .chat_avatar {
+                        height: 55px;
+                        width: 55px;
+                    }
                     .chat_name {
                         margin-left: 15px;
+                        font-size: 15px;
+                        line-height: 20px;
+                        color: #000;
                     }
                 }
             }
         }
         .chat_messages {
-            max-height: 35vw;
-            min-height: 35vw;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             .chat_user-window {
-                padding: 15px 20px;
-                width: 30vw;
+                padding: 15px 19px;
                 border-bottom: 1px solid #D8D8D8;
                 .chat_user {
                     display: flex;
                     align-items: center;
+                    .chat_avatar {
+                        height: 40px;
+                        width: 40px;
+                    }
                     .chat_name {
-                        margin-left: 15px;
+                        margin-left: 10px;
+                        font-size: 15px;
+                        line-height: 20px;
+                        color: #000;
                     }
                 }
             }
