--- a/src/assets/scss/common/page-switcher.scss
+++ b/src/assets/scss/common/page-switcher.scss
@@ -6,7 +6,7 @@
                 width: 330px;
                 display: flex;
                 align-items: center;
-                padding: 19px;
+                padding: 12px 0 13px 15px;
                 background: #FFFFFF;
                 box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.03);
                 border-radius: 10px;
