--- a/src/assets/scss/common/personal-settings.scss
+++ b/src/assets/scss/common/personal-settings.scss
@@ -16,7 +16,7 @@
                     border-right: 0;
                     border-bottom: solid 1px #cbcbcb;
                     padding-left: 5px;
-                    padding-bottom: 10px;
+                    padding-bottom: 9px;
                     font-size: 13px;
                     line-height: 18px;
                     color: #000;
@@ -50,13 +50,13 @@
                 display: flex;
                 justify-content: space-between;
                 .personal_name {
-                    width: 42%;
+                    width: 210px;
                     border-top: 0;
                     border-left: 0;
                     border-right: 0;
                     border-bottom: solid 1px #cbcbcb;
                     padding-left: 5px;
-                    padding-bottom: 10px;
+                    padding-bottom: 9px;
                     font-size: 13px;
                     line-height: 18px;
                     color: #000;
@@ -67,13 +67,13 @@
                     }
                 }
                 .personal_surname {
-                    width: 42%;
+                    width: 210px;
                     border-top: 0;
                     border-left: 0;
                     border-right: 0;
                     border-bottom: solid 1px #cbcbcb;
                     padding-left: 5px;
-                    padding-bottom: 10px;
+                    padding-bottom: 9px;
                     font-size: 13px;
                     line-height: 18px;
                     color: #000;
@@ -87,15 +87,15 @@
             .personal_footer {
                 margin-top: 25px;
                 display: flex;
-                justify-content: space-between;
                 .personal_phone {
-                    width: 49%;
+                    margin-right: 20px;
+                    width: 246px;
                     border-top: 0;
                     border-left: 0;
                     border-right: 0;
                     border-bottom: solid 1px #cbcbcb;
                     padding-left: 5px;
-                    padding-bottom: 10px;
+                    padding-bottom: 9px;
                     font-size: 13px;
                     line-height: 18px;
                     color: #000;
@@ -106,12 +106,11 @@
                     }
                 }
                 .personal_date {
-                    width: 35%;
                     display: flex;
-                    justify-content: space-between;
                     .personal_day {
-                        width: 20%;
-                        padding-bottom: 10px;
+                        width: 36px;
+                        margin-right: 15px;
+                        padding-bottom: 9px;
                         border-top: 0;
                         border-left: 0;
                         border-right: 0;
@@ -127,8 +126,9 @@
                         }
                     }
                     .personal_month {
-                        width: 20%;
-                        padding-bottom: 10px;
+                        width: 36px;
+                        margin-right: 15px;
+                        padding-bottom: 9px;
                         border-top: 0;
                         border-left: 0;
                         border-right: 0;
@@ -145,8 +145,8 @@
                     }
                 }
                 .personal_year {
-                    width: 42%;
-                    padding-bottom: 10px;
+                    width: 72px;
+                    padding-bottom: 9px;
                     border-top: 0;
                     border-left: 0;
                     border-right: 0;
