--- a/src/assets/scss/common/popup.scss
+++ b/src/assets/scss/common/popup.scss
@@ -5,7 +5,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(67.52deg, rgba(108, 172, 228, 0.72) 0%, rgba(108, 172, 228, 0.72) 6.16%, rgba(109, 173, 228, 0.72) 12.31%, rgba(111, 174, 229, 0.72) 18.47%, rgba(114, 176, 229, 0.72) 24.63%, rgba(117, 179, 230, 0.72) 30.79%, rgba(121, 182, 231, 0.72) 36.94%, rgba(125, 185, 232, 0.72) 43.1%, rgba(130, 189, 234, 0.72) 49.26%, rgba(134, 192, 235, 0.72) 55.42%, rgba(138, 195, 236, 0.72) 61.57%, rgba(141, 198, 237, 0.72) 67.73%, rgba(144, 200, 237, 0.72) 73.89%, rgba(146, 201, 238, 0.72) 80.05%, rgba(147, 202, 238, 0.72) 86.2%, rgba(147, 202, 238, 0.72) 92.36%);
+    background: url("@/assets/img/modal-back.png");
+    background-size: cover;
+    background-position: center;
     backdrop-filter: blur(200px);
     transition: opacity 0.3s ease;
     padding: 76px 385px;
@@ -28,7 +30,7 @@
             }
         }
         .modal_body {
-            padding: 15vh 0px 19vh;
+            padding: 231px 0px 272px;
             text-align: center;
             .modal_description {
                 margin: 25px 0 40px;
