--- a/src/assets/scss/common/search-form.scss
+++ b/src/assets/scss/common/search-form.scss
@@ -1,6 +1,6 @@
 .search-form {
     .search-form_container {
-        padding: 10px;
+        padding: 9px 9px 0px 9px;
         .search-form_form {
             display: flex;
             align-items: center;
@@ -10,7 +10,7 @@
                 border-radius: 22.5px;
                 border: 0;
                 padding: 10px 15px;
-                font-size: 14px;
+                font-size: 12px;
                 color: black;
                 line-height: 15px;
                 &::placeholder {
