--- a/src/assets/scss/common/settings-switcher.scss
+++ b/src/assets/scss/common/settings-switcher.scss
@@ -1,10 +1,11 @@
 .settings-switcher {
     .settings-switcher_container {
-        padding: 15px 25px;
+        padding: 15px 25px 0px 25px;
         background: #FFFFFF;
         box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.03);
         border-radius: 10px;
         .settings-switcher_list {
+            padding-bottom: 191px;
             .settings-switcher_item {
                 font-size: 13px;
                 line-height: 18px;
@@ -16,7 +17,6 @@
                 margin-bottom: 20px;
             }
             .settings-switcher_item:last-child {
-                margin-bottom: 190px;
                 margin-right: 122px;
             }
             .settings-active {
