--- a/src/assets/scss/common/general-settings.scss
+++ b/src/assets/scss/common/general-settings.scss
@@ -49,7 +49,9 @@
                         .general_checkbox:checked+label::before {
                             border-color: #3D88F8;
                             background-color: #3D88F8;
-                            background-image: url("@/assets/img/checkbox.svg")
+                            background-image: url("/src/assets/img/checkbox.svg");
+                            background-size: 80%;
+                            background-position: center
                         }
                     }
                     .general_form:not(:first-child) {
