Исправил outline в инпутах, border в кнопке загрузки видео

--- a/src/assets/scss/common/popup.scss
+++ b/src/assets/scss/common/popup.scss
@@ -48,6 +48,7 @@
                 line-height: 19px;
                 cursor: pointer;
                 font-family: "Century Gothic";
+                border: 0;
             }
         }
     }
