--- a/src/assets/scss/common/page-switcher.scss
+++ b/src/assets/scss/common/page-switcher.scss
@@ -34,3 +34,21 @@
         }
     }
 }
+
+@media screen and(max-width:1280px) {
+    .page-switcher {
+        .page-switcher_container {
+            .page-switcher_list {
+                .page-switcher_item {
+                    width: 280px
+                }
+            }
+        }
+    }
+}
+
+@media screen and(max-width:1024px) {
+    .page-switcher {
+        display: none;
+    }
+}
