--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,3 +16,51 @@
         background: #FAFCFF
     }
 }
+
+@media screen and(min-width:1921px) and (max-width: 2560px) {
+    .page {
+        .page_container {
+            padding: 30px 450px;
+        }
+    }
+}
+
+@media screen and(max-width: 1919px) {
+    .page {
+        .page_container {
+            padding: 30px 240px;
+        }
+    }
+}
+
+@media screen and(max-width: 1680px) {
+    .page {
+        .page_container {
+            padding: 30px 120px;
+        }
+    }
+}
+
+@media screen and(max-width: 1440px) {
+    .page {
+        .page_container {
+            padding: 30px 50px;
+        }
+    }
+}
+
+@media screen and(max-width: 1280px) {
+    .page {
+        .page_container {
+            padding: 20px 30px;
+        }
+    }
+}
+
+@media screen and(max-width: 1024px) {
+    .page {
+        .page_container {
+            padding: 0px;
+        }
+    }
+}
