--- a/src/assets/scss/common/chat.scss
+++ b/src/assets/scss/common/chat.scss
@@ -54,10 +54,9 @@
     }
 }
 
-.closed {
-    display: none !important;
-}
-
+// .closed {
+//     display: none !important;
+// }
 @media screen and(max-width: 3000px) {
     .chat {
         .chat_container {
@@ -116,5 +115,8 @@
                 }
             }
         }
+    }
+    .closed {
+        display: none !important;
     }
 }
